# study-companion

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 236a72f26fdd_create_users_table.py
app/: main.py
app/api/v1/: auth.py
app/core/: config.py  hashing.py
app/db/: database.py
app/exceptions/: auth.py
app/models/: user.py
app/schemas/: user.py
app/services/: auth_service.py  user_service.py
